deploy: 5ab10bd39f5fc523f734b09a712e89903dc93506

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><p><a class="anchor" id="md_README"></a>The <code>naprima</code> package is the result of a master's thesis project and was used to faciliate the evaluation of a mathematical model of arm movement assembly from movement primitives. Its structure suggests an interface against which modules for the kinematic modeling of robots, control interfaces for the operation of robots or robot simulations, perception modules and modules for the planning of movements can be developed and added to a the existing ones to provide a library for the modular design and execution of robotics experiments.</p>
-<p>If you have any suggestions, feel free to use the issue tracker.</p>
+<p>View the documentation <a href="https://doertemithut.github.io/naprima/">here</a>.<br  />
+ If you have any suggestions, feel free to use the issue tracker.</p>
 <h1><a class="anchor" id="autotoc_md1"></a>
 An Example Experiment</h1>
 <p>In the following, the use of the full application scope of the <code>naprima</code> package will be illustrated by setting up an example.</p>
