--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 <div class="title">The naprima Package </div>  </div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p><a class="anchor" id="md_README"></a> The <code>naprima</code> package is the result of a master's thesis project and was used to faciliate the evaluation of a mathematical model of arm movement assembly from movement primitives. Its structure suggests an interface against which modules for the kinematic modeling of robots, control interfaces for the operation of robots or robot simulations, perception modules and modules for the planning of movements can be developed and added to a the existing ones to provide a library for the modular design and execution of robotics experiments.</p>
+<div class="textblock"><p><a class="anchor" id="md_README"></a> The <code>naprima</code> package is a result of a master's thesis project and was used to faciliate the evaluation of a mathematical model of arm movement assembly from movement primitives. Its structure suggests an interface against which modules for the kinematic modeling of robots, control interfaces for the operation of robots or robot simulations, perception modules and modules for the planning of movements can be developed and added to a the existing ones to provide a library for the modular design and execution of robotics experiments.</p>
 <p>View the documentation <a href="https://doertemithut.github.io/naprima/">here</a>.<br  />
  If you have any suggestions, feel free to use the issue tracker.</p>
 <h1><a class="anchor" id="autotoc_md1"></a>
